# gan-trainer

./: .gitignore  README.md  predict.py  pyproject.toml  requirements.txt  train.py
src/gan_trainer/: model.py  trainer.py
tests/: test_gan_trainer.py
