[tool.poetry]
name = "gan-trainer"
version = "0.1.0"
description = ""
authors = ["Bhuwan Bhatt <bhattbhuwan13@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
torch = "^1.9.0"
numpy = "^1.21.2"
torchvision = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
